# uc-storage-migration-untested

./: .gitignore  README.md  pyproject.toml
docs/: CUSTOMER_RUNBOOK.md
docs/superpowers/plans/: 2026-05-12-plan-1-discovery-and-decision.md  2026-05-13-plan-2-migration-playbooks.md
docs/superpowers/specs/: 2026-05-12-uc-storage-reconciliation-design.md
notebooks/: 00_repoint_schemas.py  01_discovery.py  02_decision_report.py  03a_rollback.py  03b_forward_migrate.py  03c_fix_inherited_grants.py  04_validation.py  05_cleanup.py
tests/: conftest.py  test_cleanup.py  test_config.py  test_discovery.py  test_governance.py  test_lineage.py  test_migration.py  test_migration_state.py  test_paths.py  test_preflight.py  test_reporting.py  test_rollback.py  test_sql.py  test_state.py  test_storage_path.py  test_uc_admin.py  test_uc_client.py  test_validation.py
utils/: cleanup.py  config.py  discovery.py  governance.py  lineage.py  migration.py  migration_state.py  paths.py  preflight.py  reporting.py  rollback.py  sql.py  state.py  storage_path.py  uc_admin.py  uc_client.py  validation.py
